--- a/style.css
+++ b/style.css
@@ -1,3 +1,6 @@
 body {
-    background-image: url(./assets/bg-desktop.jpg);
+  background-image: url(./assets/bg-mobile.jpg);
+  background-repeat: no-repeat;
+  background-position: top center;
+  background-size: cover;
 }
