--- a/style.css
+++ b/style.css
@@ -17,7 +17,6 @@ body * {
 
 #container {
   width: 360px;
-  height: 712px;
   margin: 56px auto 0px;
 }
 #profile {
@@ -56,7 +55,7 @@ ul li a {
   -webkit-backdrop-filter: blur(4px);
   text-decoration: none;
   font-weight: 500;
-  transition: background 0.6s;
+  transition: background 0.5s;
 }
 
 ul li a:hover {
@@ -66,8 +65,19 @@ ul li a:hover {
 
 #social-links {
   display: flex;
-  gap: 32px;
   padding: 24px 0;
   font-size: 24px;
   justify-content: center;
+}
+#social-links a {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 16px;
+  transition: background 0.5s;
+  border-radius: 50%;
+}
+
+#social-links a:hover {
+  background: rgba(255, 255, 255, 0.2);
 }
